--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'includes/_header.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
