ajout des controlleurs principaux

--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,5 +1,8 @@
 <header>
     <nav>
-        <a href="{{ path('app_home') }}"> <img src="{{ asset('images/logo.png') }}"> </a>
+        <a href="{{ path('app_home') }}"> <img src="{{ asset('img/logo.png') }}"> </a>
+        <a href="{{ path('app_admin_dashboard') }}">Administration</a>
+        <a href="{{ path('app_formation') }}">Formation</a>
+        <a href="{{ path('app_account') }}">Compte</a>
     </nav>
 </header>
