--- a/public/css/header.css
+++ b/public/css/header.css
@@ -30,6 +30,7 @@ a:visited {
 img {
     position: absolute;
     max-width: 4%;
+    left: 10px;
 }
 
 .liens {
@@ -37,22 +38,25 @@ img {
     position: relative;
     margin: auto;
     margin-left: 25%;
-    width: 60%;
+    width: 100%;
     padding: 10px;
+    top: -7px;
+    font-size: large;
 }
 
 .logout {
-    position:static;
+    position: absolute;
     background-color: red;
     border-radius: 5px;
     padding: 5px;
     width: 155px;
     border-left: 1px;
+    right: 10px;
+    top : 25px;
 }
 
 .logout-link {
     color: white !important;
     font-family: 'Inter' !important;
     margin-left: 7px;
-    
 }
