--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,7 +9,6 @@ body {
     font-family: "Inter", sans-serif;
     width: 100vw;
     height: 100vh;
-    transition: all 0.3s ease-in-out;
 }
 
 main {
@@ -36,7 +35,7 @@ main {
 /* ---------------------------------------------- */
 
 h1, h2, h3 {
-    width: inherit;
+    width: 80%;
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -56,7 +55,7 @@ label {
 }
 
 .textfield {
-    width: inherit;
+    min-width: 80%;
     font-size: 1.125rem;
     border: solid 1px rgba(0, 0, 0, 0.30);
     border-radius: 10px;
@@ -64,8 +63,7 @@ label {
 }
 
 .btn {
-    width: inherit;
-    min-width: 15rem;
+    min-width: 80%;
     font-family: "Inter", sans-serif;
     font-size: 1.5rem;
     border-radius: 15px;
@@ -86,7 +84,9 @@ label {
 }
 
 .login-panel {
-    width: 40vw;
+    width: 60vw;
+    max-width: 900px;
+    height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -94,19 +94,35 @@ label {
     border: solid 1px white;
     border-radius: 25px;
     background-color: white;
-    padding: 3rem 4rem;
-    
+    padding: 3rem 0rem;
 }
 
 .login-panel-logo {
-    width: 75px;
+    width: 100px;
     height: auto;
     margin-bottom: 1.5rem;
 }
 
 .login-btn {
     padding: 1rem;
-    margin: 4rem 0 1rem 0;
+    margin-top: 4rem;
 }
 
 /* ---------------------------------------------- */
+
+header {
+    display: flex;
+    flex-direction: row;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+
+@media screen and (max-width: 1000px) {
+  .login-panel {
+    padding: 1rem;
+    border: none;
+    border-radius: 0%;
+    width: 100vw;
+    height: 100vh;
+  }
+}
