--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -1,5 +1,5 @@
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('css/header.css') }}">
+<link rel="stylesheet" href="{{ asset('app.css') }}">
 {% endblock %}
 
 <header id="header">
@@ -11,7 +11,7 @@
         <a href="{{ path('app_account') }}">Compte</a>
         </div>
         <div class="logout">
-        <a class="logout-link" href="/lougout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+        <a class="logout-link" href="/logout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
         </div>
     </nav>
 </header>
