--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,8 +1,10 @@
 header {
     background-color: white;
+    height: 90px;
+    font-family: 'Inter';
     border-bottom: solid;
     border-bottom-width: 2px;
-    border-bottom-color: grey;
+    border-bottom-color: lightgray;
 }
 
 #header_nav {
@@ -13,7 +15,6 @@ header {
 a {
     margin-left: 10%;
     margin-top: 25%;
-    
 }
 
 a:link {
@@ -30,18 +31,19 @@ a:visited {
 img {
     position: absolute;
     max-width: 4%;
+    min-width: 2%;
     left: 10px;
+    top: 1%;
 }
 
 .liens {
-    font-family: sans-serif;
     position: relative;
     margin: auto;
     margin-left: 25%;
-    width: 100%;
     padding: 10px;
     top: -7px;
     font-size: large;
+    width: 100%;
 }
 
 .logout {
@@ -57,6 +59,21 @@ img {
 
 .logout-link {
     color: white !important;
-    font-family: 'Inter' !important;
     margin-left: 7px;
+}
+
+@media only screen and (max-width: 600px){
+    .liens {
+        display: none;
+    }
+    img {
+        max-width: 15%;
+        left : 50px
+    }
+    .logout {
+        width: 150px;
+        padding: 15px;
+        right : 50px;
+        border-radius: 10px;
+    }
 }
