--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,6 +8,10 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
+<div class="bienvenue">
+    <h1> Bienvenue 
+</div>
+
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
