--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -33,7 +33,6 @@ main {
 /* ---------------------------------------------- */
 
 h1, h2, h3 {
-    width: 80%;
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -150,9 +149,9 @@ img {
     margin: auto;
     margin-left: 25%;
     padding: 10px;
-    top: -7px;
+    top: -15px;
     font-size: large;
-    width: 100%;
+    width: 150%;
 }
 
 .logout {
@@ -171,7 +170,7 @@ img {
     margin-left: 7px;
 }
 
-@media only screen and (max-width: 600px){
+@media (max-width: 600px){
     .liens {
         display: none;
     }
@@ -197,3 +196,12 @@ img {
     height: 100vh;
   }
 }
+
+/* ---------------------------------------------- */
+.bienvenue {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    text-align: center;
+}
+
