--- a/templates/layout/main.html.twig
+++ b/templates/layout/main.html.twig
@@ -3,4 +3,5 @@
 {% block body %}
     {% include 'includes/_header.html.twig' %}
     {% block main %}{% endblock %}
+    {% include 'includes/_footer.html.twig' %}
 {% endblock %}
