--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -2,16 +2,20 @@
 <link rel="stylesheet" href="{{ asset('app.css') }}">
 {% endblock %}
 
-<header id="header">
-    <nav id="header_nav">
-        <a href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}"></a>
-        <div class="liens">
-        <a href="{{ path('app_admin_dashboard') }}">Administration</a>
-        <a href="{{ path('app_formation') }}">Formation</a>
-        <a href="{{ path('app_account') }}">Compte</a>
+<header>
+    <nav id="header-nav">
+        <div id="header-nav-left-side">
+            <a id="header-logo-container" href="{{ path('app_home') }}">
+                <img id="header-logo" alt="Accueil" src="{{ asset('img/logo.png') }}">
+            </a>
+            <div id="header-nav-links">
+                <a href="{{ path('app_admin_dashboard') }}">Administration</a>
+                <a href="{{ path('app_formation') }}">Formation</a>
+                <a href="{{ path('app_account') }}">Compte</a>
+            </div>
         </div>
         <div class="logout">
-        <a class="logout-link" href="/logout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a class="btn logout-btn warning-color" href="/logout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
         </div>
     </nav>
 </header>
