--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -56,11 +56,6 @@ BALISES GENERALES
 ---------------------------------------------- 
 */
 
-h1, h2, h3 {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
 .h3 {
     font-size: 1.5rem;
 }
@@ -96,6 +91,10 @@ label {
 
 a {
     text-decoration: none;
+}
+
+.text-align-center {
+    text-align: center;
 }
 
 /*
@@ -196,8 +195,8 @@ LOGIN PAGE
 */
 
 .login-main {
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -205,7 +204,7 @@ LOGIN PAGE
 }
 
 .login-panel {
-    width: 60vw;
+    width: 60%;
     max-width: 900px;
     height: max-content;
     display: flex;
@@ -229,6 +228,55 @@ LOGIN PAGE
     margin-top: 4rem;
 }
 
+/*
+---------------------------------------------- 
+ACCOUNT PAGE
+---------------------------------------------- 
+*/
+
+.title-main {
+    margin-top: 3rem;
+    margin-left: 3rem;
+}
+
+.settings-container {
+    padding: 0 3rem;
+    text-align: left;
+}
+
+.settings-title-container {
+    display: flex;
+    align-items: center;
+}
+
+.settings-title {
+    padding: 0 2rem;
+    white-space: nowrap;
+}
+
+.line {
+    width: 100%;
+    height: 3px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.settings-reset-password-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.settings-reset-password-inputs-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.settings-reset-password-input-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 2rem;
+}
+
 
 /*
 ---------------------------------------------- 
@@ -243,11 +291,11 @@ MEDIA QUERIES
     }
 
     .login-panel {
+        width: 100%;
+        height: 100%;
         padding: 1rem;
         border: none;
         border-radius: 0%;
-        width: 100vw;
-        height: 100vh;
     }
 
     footer {
@@ -258,6 +306,8 @@ MEDIA QUERIES
         align-items: center;
         position: fixed;
         bottom: 0;
+        border-top: solid 1px var(--primary-color);
+        background-color: white;
     }
 
     #footer-nav-links>a>svg {
