--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,11 +20,11 @@
 
 
             <img class="login-panel-logo" src="{{ asset('img/logo.png') }}">
-            <h1 class="h3">Bienvenue sur votre espace de formation</h1>
+            <h1 class="h3 text-align-center">Bienvenue sur votre espace de formation</h1>
             <label for="username">Email</label>
-            <input class="textfield" type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+            <input class="textfield form-control" type="email" value="{{ last_username }}" name="_username" id="username" autocomplete="email" required autofocus>
             <label for="password">Mot de passe</label>
-            <input class="textfield" type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+            <input class="textfield form-control" type="password" name="_password" id="password" autocomplete="current-password" required>
             <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
             <button class="btn login-btn utility-color" type="submit">Se connecter</button>
             {#
