--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -6,11 +6,14 @@
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    body {
+        background-color : white;
+    }
 </style>
 
 <div class="bienvenue">
     {% if app.user %}
-        <h1>Bienvenue {{ app.user.prenom }}</h1>
+        <h1>Bienvenue {{ app.user.prenom}}</h1>
         <h2 class="reprendre">Reprenez où vous en étiez</h2>
     {% else %}
         <h1>Bienvenue Invité</h1>
@@ -19,14 +22,20 @@
 </div>
 
 <div class="formations">
+    {% set hasFormation = false %}
     {% for formation in formations %}
         {% if formation.estVisible == 1 %}
-        <h2> {{ formation.titre }}</h2>
-        <div class="truncate">
-        {{ formation.description }}
-        </div> 
+            {% set hasFormation = true %}
+            <h2>{{ formation.titre }}</h2>
+            <div class="truncate">
+                {{ formation.description }}
+            </div>
         {% endif %}
     {% endfor %}
+
+    {% if not hasFormation %}
+        <p>Aucune formation disponible.</p>
+    {% endif %}
 </div>
 
 
