--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -6,6 +6,13 @@
 
 
 {% block main %}
+<style>
+    body {
+        background-color : white;
+    }
+</style>
+
+
 <h1 class="h1 title-main">Paramètres</h1>
 <div class="settings-container">
     <div class="settings-title-container">
