--- a/templates/formation/formation.html.twig
+++ b/templates/formation/formation.html.twig
@@ -1,6 +1,13 @@
 {% extends 'layout/main.html.twig' %}
 
 {% block main %}
+<style>
+    body {
+        background-color : white;
+    }
+</style>
+
+
 <div>
 TEST
 </div>
