--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -21,7 +21,7 @@
     </div>
     <p>Cette section est consacrée aux informations de votre compte.</p>
     <p>
-        L’adresse mail associée à votre compte est : <b>bob@mairie-villefontaine.fr</b>
+        L’adresse mail associée à votre compte est : <b>{{ app.user.email }}</b>
         <br>
         Le statut du compte est <b>gestionnaire de formations</b>
     </p>
