--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -14,7 +14,7 @@
                 <a href="{{ path('app_account') }}">Compte</a>
             </div>
         </div>
-        <div class="logout">
+        <div class="logout-container">
             <a class="btn logout-btn warning-color" href="/logout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
         </div>
     </nav>
