--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -9,7 +9,9 @@
                 <img id="header-logo" alt="Accueil" src="{{ asset('img/logo.png') }}">
             </a>
             <div id="header-nav-links">
+            {% if is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('app_admin_dashboard') }}">Administration</a>
+            {% endif %}
                 <a href="{{ path('app_formation') }}">Formation</a>
                 <a href="{{ path('app_account') }}">Compte</a>
             </div>
