--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,35 +16,36 @@
 {% endblock %}
 
 {% block body %}
-    <form method="post" class="login-panel">
+<main class="login-main">
+    {% if error %}
+        <div class="alert alert-danger">Identifiants invalides</div>
+    {% endif %}
 
-        {% if error %}
-            <div class="alert alert-danger">Identifiants invalides</div>
-        {% endif %}
-
-        {% if app.user %}
-            <div class="mb-3">
-                Tu es connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-            </div>
-        {% endif %}
-
-
+    {% if app.user %}
+        <div class="mb-3">
+            Tu es connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+        </div>
+    {% endif %}
+    <div class="login-panel">
         <img class="login-panel-logo" src="{{ asset('img/logo.png') }}">
         <h1 class="h3 text-align-center">Bienvenue sur votre espace de formation</h1>
-        <label for="username">Email</label>
-        <input class="textfield form-control" type="email" value="{{ last_username }}" name="_username" id="username" autocomplete="email" required autofocus>
-        <label for="password">Mot de passe</label>
-        <input class="textfield form-control" type="password" name="_password" id="password" autocomplete="current-password" required>
-        <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
-        <button class="btn login-btn utility-color" type="submit">Se connecter</button>
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
+        <form method="post" class="login-form">
+            <label for="username">Email</label>
+            <input class="textfield form-control" type="email" value="{{ last_username }}" name="_username" id="username" autocomplete="email" required autofocus>
+            <label for="password">Mot de passe</label>
+            <input class="textfield form-control" type="password" name="_password" id="password" autocomplete="current-password" required>
+            <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+            <button class="btn login-btn utility-color" type="submit">Se connecter</button>
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
 
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Remember me</label>
-            </div>
-        #}
-    </form>
+                <div class="checkbox mb-3">
+                    <input type="checkbox" name="_remember_me" id="_remember_me">
+                    <label for="_remember_me">Remember me</label>
+                </div>
+            #}
+        </form>
+    </div>
+</main>
 {% endblock %}
