--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -17,7 +17,10 @@
             </div>
         </div>
         <div class="logout-container">
-            <a class="btn logout-btn warning-color" href="/logout">Se déconnecter <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a class="btn logout-btn warning-color" href="/logout">
+                <span>Se déconnecter</span>
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+            </a>
         </div>
     </nav>
 </header>
