ajout de la modification de mot de passe

--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -25,7 +25,7 @@
         <br>
         Le statut du compte est <b>gestionnaire de formations</b>
     </p>
-    <p>Service : <b>Ressources humaines</b></p>
+    <p>Service : <b>{{ app.user.service.nom }}</b></p>
 </div>
 <div class="settings-container">
     <div class="settings-title-container">
