--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout/main.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block main %}
 <style>
