--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -1,7 +1,8 @@
 {% extends 'layout/main.html.twig' %}
 
-{% block main %}
+{% block title %}Tableau de bord - Admin{% endblock %}
 
+{% block main %}
 <style>
     body {
         background-color : white;
