--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Compte{% endblock %}
 
+{% block body_attributes %}
+    style="background-color: {{ background_color|default('#ffffff') }};"
+{% endblock %}
+
 {% block main_attributes %}
     class="settings-main"
 {% endblock %}
