--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Tableau de bord - Admin{% endblock %}
 
+{% block body_attributes %}
+    style="background-color: {{ background_color|default('#ffffff') }};"
+{% endblock %}
+
 {% block main %}
 <style>
     body {
