--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -2,15 +2,11 @@
 
 {% block title %}Accueil{% endblock %}
 
-{% block main %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    body {
-        background-color : white;
-    }
-</style>
+{% block body_attributes %}
+    style="background-color: {{ background_color|default('#ffffff') }};"
+{% endblock %}
 
+{% block main %}
 <div class="bienvenue">
     {% if app.user %}
         <h1>Bienvenue {{ app.user.prenom}}</h1>
