--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -80,7 +80,6 @@ label {
     display: block;
     text-align: center;
     cursor: pointer;
-    width: 100%;
     font-family: "Inter", sans-serif;
     font-weight: 600;
     font-size: 1.125rem;
@@ -103,7 +102,10 @@ a {
     padding: 2rem 4rem;
     top: var(--header-height);
     bottom: var(--footer-height);
-    position: relative;
+    position: absolute;
+    overflow-y: auto;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 /*
@@ -341,6 +343,10 @@ MEDIA QUERIES
         display: none;
     }
 
+    .settings-reset-password-inputs-container {
+        flex-direction: column;
+    }
+
     .login-panel {
         width: 100%;
         height: 100%;
@@ -354,6 +360,7 @@ MEDIA QUERIES
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position:fixed;
     }
 
 }
