--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -12,8 +12,31 @@
         background-color : white;
     }
 </style>
-
-<div>
-TEST
+<div class="settings-container">
+    <div class="settings-title-container">
+        <h2 class="h2 settings-title">Infrastructures et Utilisateurs</h2>
+        <div class="line"></div>
+    </div>
+    <p>Cette section est consacrée a la gestion des utilisateurs, des services et des salles.</p>
+    <div class="admin-settings-buttons settings-btn "> 
+        <button class="btn admin-btn settings-button utility-color"> Gérer les utilisateurs </button>
+        <button class="btn admin-btn utility-color"> Gérer les services </button>
+        <button class="btn admin-btn utility-color"> Gérer les salles </button>
+    </div>
 </div>
+<div class="settings-container">
+    <div class="settings-title-container">
+        <h2 class="h2 settings-title">Formations</h2>
+        <div class="line"></div>
+    </div>
+    <p>Cette section est consacrée à la gestion des formations et de leurs sessions.</p>
+    <div class="admin-settings-buttons settings-btn"> 
+        <button class="btn admin-btn utility-color"> Gérer les formations </button>
+        <button class="btn admin-btn utility-color"> Gérer les sessions de formations </button>
+        <button class="btn admin-btn utility-color"> Gérer les compétences </button>
+    </div>
+</div>
+
+
+
 {% endblock %}
