--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -383,6 +383,13 @@ MEDIA QUERIES
         box-sizing: border-box;
     } 
 
+    .admin-settings-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+
 
     
 }
@@ -447,4 +454,23 @@ MEDIA QUERIES
     text-align: left;
     margin-top: 100px;
     margin-left: 150px;
+}
+
+/*
+---------------------------------------------- 
+ADMIN PAGE
+---------------------------------------------- 
+*/
+
+.admin-settings-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+.admin-settings-buttons .btn {
+    width: 100%;
+
 }
