--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -36,6 +36,21 @@
         <button class="btn admin-btn utility-color"> Gérer les compétences </button>
     </div>
 </div>
+<div class="settings-container">
+    <div class="settings-title-container">
+        <h2 class="h2 settings-title">Charte graphique</h2>
+        <div class="line"></div> 
+    </div>
+    <p>Cette section est consacrée à la personnalisation et la gestion de la charte graphique du site</p>
+    <input type="color" value="{{background_color}}"/>
+    <label>Couleur d'arrière plan</label>
+    <input type="color" value="{{utility_button}}"/>
+    <label>Couleur Boutons Contextuels</label>
+    <input type="color" value="{{warning_button}}"/>
+    <label>Couleur Boutons Importants</label>
+    <input type="color" value="{{login_background_color}}"/>
+    <label>Couleur Arrière plan du Login</label>
+</div>
 
 
 
