style(formation) - Mise en page des champs de saisie de la 1ère ligne

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -119,6 +119,12 @@ a {
     width: 25px;
 }
 
+.table-textfield {
+    width: 100%;
+    padding: 0.5rem;
+    border: none;
+}
+
 /*
 ---------------------------------------------- 
 HEADER
