css de admin à été amélioré

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -472,5 +472,9 @@ ADMIN PAGE
 
 .admin-settings-buttons .btn {
     width: 100%;
+}
 
+.hex-btn {
+    flex-direction: column;
+    padding-bottom: 1em;
 }
