--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -42,14 +42,24 @@
         <div class="line"></div> 
     </div>
     <p>Cette section est consacrée à la personnalisation et la gestion de la charte graphique du site</p>
-    <input type="color" value="{{background_color}}"/>
-    <label>Couleur d'arrière plan</label>
-    <input type="color" value="{{utility_button}}"/>
-    <label>Couleur Boutons Contextuels</label>
-    <input type="color" value="{{warning_button}}"/>
-    <label>Couleur Boutons Importants</label>
-    <input type="color" value="{{login_background_color}}"/>
-    <label>Couleur Arrière plan du Login</label>
+    <div class="couleur-btn">
+        <div class="hex-btn">
+            <input type="color" value="{{background_color}}"/>
+            <label>Couleur d'arrière plan</label>
+        </div>
+        <div class="hex-btn">
+            <input type="color" value="{{utility_button}}"/>
+            <label>Couleur Boutons Contextuels</label>
+        </div>
+        <div class="hex-btn">
+            <input type="color" value="{{warning_button}}"/>
+            <label>Couleur Boutons Importants</label>
+        </div>
+        <div class="hex-btn">
+            <input type="color" value="{{login_background_color}}"/>
+            <label>Couleur Arrière plan du Login</label>
+        </div>
+    </div>
 </div>
 
 
