--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -36,31 +36,39 @@
         <button class="btn admin-btn utility-color"> Gérer les compétences </button>
     </div>
 </div>
-<div class="settings-container">
-    <div class="settings-title-container">
-        <h2 class="h2 settings-title">Charte graphique</h2>
-        <div class="line"></div> 
+<form method="post" action="{{ path('admin_update_colors') }}">
+    <div class="settings-container">
+        <div class="settings-title-container">
+            <h2 class="h2 settings-title">Charte graphique</h2>
+            <div class="line"></div> 
+        </div>
+        <p>Cette section est consacrée à la personnalisation et la gestion de la charte graphique du site</p>
+        <div class="couleur-btn">
+            <div class="hex-btn">
+                <input type="color" name="background_color" value="{{background_color}}"/>
+                <label>Couleur d'arrière plan</label>
+            </div>
+            <div class="hex-btn">
+                <input type="color" name="utility_button" value="{{utility_button}}"/>
+                <label>Couleur Boutons Contextuels</label>
+            </div>
+            <div class="hex-btn">
+                <input type="color" name="warning_button" value="{{warning_button}}"/>
+                <label>Couleur Boutons Importants</label>
+            </div>
+            <div class="hex-btn">
+                <input type="color" name="login_background_color" value="{{login_background_color}}"/>
+                <label>Couleur Arrière plan du Login</label>
+            </div>
+        </div>
     </div>
-    <p>Cette section est consacrée à la personnalisation et la gestion de la charte graphique du site</p>
-    <div class="couleur-btn">
-        <div class="hex-btn">
-            <input type="color" value="{{background_color}}"/>
-            <label>Couleur d'arrière plan</label>
-        </div>
-        <div class="hex-btn">
-            <input type="color" value="{{utility_button}}"/>
-            <label>Couleur Boutons Contextuels</label>
-        </div>
-        <div class="hex-btn">
-            <input type="color" value="{{warning_button}}"/>
-            <label>Couleur Boutons Importants</label>
-        </div>
-        <div class="hex-btn">
-            <input type="color" value="{{login_background_color}}"/>
-            <label>Couleur Arrière plan du Login</label>
-        </div>
+    <button type="submit" class="btn admin-btn utility-color">Appliquer</button>
+</form>
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success">
+        {{ message }}
     </div>
-</div>
+{% endfor %}
 
 
 
