fix(base.html.twig) - Ajout des variables globales de l'arrière plan générique et de l'arrière plan du login

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,9 @@
             :root {
                 --primary-color:{{ parametres.getParametre("primary_color", "#A2BF3D") }} ;
                 --utility-button:{{ parametres.getParametre("utility_button", "#6F82FF") }} ;
-                --warning-color:{{ parametres.getParametre("warning_button", "#ff0000") }} ;
+                --warning-color:{{ parametres.getParametre("warning_button", "#FF0000") }} ;
+                --background-color:{{ parametres.getParametre("background_color", "#ffffff") }} ;
+                --login-background-color:{{ parametres.getParametre("login_background_color", "#A2BF3D") }} ;
             }
             
         </style>
