feat(main.html.twig) - Arrière plan générique dynamique

--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -2,10 +2,6 @@
 
 {% block title %}Compte{% endblock %}
 
-{% block body_attributes %}
-    style="background-color: {{ background_color|default('#ffffff') }};"
-{% endblock %}
-
 {% block main_attributes %}
     class="settings-main"
 {% endblock %}
@@ -68,8 +64,8 @@
             <h2 class="h2 settings-title">Support</h2>
             <div class="line"></div>
         </div>
-        <p>Cette section est consacrée au contact du support de l’application. A travers des tickets, vous pouvez faire remonter des bugs, proposer des pistes d’améliorations...</p>
-        <a class="btn settings-btn utility-color">Changer mon mot de passe</a>
+        <p>Cette section est consacrée au contact du support de l’application. A travers des tickets, vous pouvez faire remonter des bugs, proposer des pistes d’améliorations ou des idées de formations...</p>
+        <a class="btn settings-btn utility-color">Envoyer un Ticket</a>
 </div>
 
 {% endblock %}
