--- a/templates/admin_dashboard/admin_dashboard.html.twig
+++ b/templates/admin_dashboard/admin_dashboard.html.twig
@@ -12,8 +12,8 @@
     <p>Cette section est consacrée a la gestion des utilisateurs, des services et des salles.</p>
     <div class="admin-settings-buttons settings-btn "> 
         <a href="/admin/utilisateur"> <button class="btn admin-btn settings-button utility-color"> Gérer les utilisateurs </button> </a>
-        <button class="btn admin-btn utility-color"> Gérer les services </button>
-        <button class="btn admin-btn utility-color"> Gérer les salles </button>
+        <a href="/admin/#"> <button class="btn admin-btn utility-color"> Gérer les services </button> </a>
+        <a href="/admin/#"> <button class="btn admin-btn utility-color"> Gérer les salles </button> </a>
     </div>
 </div>
 <div class="settings-container">
@@ -22,10 +22,10 @@
         <div class="line"></div>
     </div>
     <p>Cette section est consacrée à la gestion des formations et de leurs sessions.</p>
-    <div class="admin-settings-buttons settings-btn"> 
-        <button class="btn admin-btn utility-color"> Gérer les formations </button>
-        <button class="btn admin-btn utility-color"> Gérer les sessions de formations </button>
-        <button class="btn admin-btn utility-color"> Gérer les compétences </button>
+    <div class="admin-settings-buttons responsiv settings-btn"> 
+        <a href="/formation"> <button class="btn responsiv admin-btn utility-color"> Gérer les formations </button> </a>
+        <a href="/admin/#"> <button class="btn responsiv admin-btn utility-color"> Gérer les sessions de formations </button> </a>
+        <a href="/admin/#"> <button class="btn responsiv admin-btn utility-color"> Gérer les compétences </button> </a>
     </div>
 </div>
 <form method="post" action="{{ path('admin_update_colors') }}">
