ajout de la supression de formation

--- a/templates/account/account.html.twig
+++ b/templates/account/account.html.twig
@@ -15,7 +15,7 @@
 </style>
 
 
-<h1 class="h1 title-main">Paramètres</h1>
+<h1 class="h1 title-main">Paramètres</h1><i class="fa-solid fa-right-from-bracket"></i>
 <div class="settings-container">
     <div class="settings-title-container">
         <h2 class="h2 settings-title">Mon Compte</h2>
